いろいろ修正
usersPlalistメソッドを追加
リファクタリング
DTOで必要なくなったものを削除